# isoplex

./: .gitignore  404.html  CONTRIBUTING.md  README.md  dev.ipynb  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  requirements_dev.txt  setup.cfg  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: deploy_docs.yml  test.yml
CODE_OF_CONDUCT/: index.html
api/: index.html
contributing/: index.html
docs/: cli_global_metrics.txt  cli_multi_sample_metrics.txt  conf.py  index.md  index.rst  installation.md  usage.md
docs/styles/: extra.css
input_data/: index.html
installation/: index.html
search/: search_index.json
src/iso_perplexity/: __init__.py  cli.py  dev_utils.ipynb  example_bulk_metrics.tsv  example_sample_metrics.tsv  utils.py
src/isoplex/: cli.py  dev_utils.ipynb  test_dev.ipynb  utils.py
styles/: extra.css
tests/: __init__.py  test_iso_perplexity.py
usage/: index.html
