[project]
name = "iso_perplexity"
version = "0.1.0"
description = "Compute and filter isoforms based on perplexity"
readme = "README.md"
authors = [
  {name = "Fairlie Reese", email = "fairlie.reese@gmail.com"}
]
maintainers = [
  {name = "Fairlie Reese", email = "fairlie.reese@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "pandas",
  "numpy"
]
requires-python = ">= 3.8"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/fairliereese/iso_perplexity/issues"
changelog = "https://github.com/fairliereese/iso_perplexity/blob/master/changelog.md"
homepage = "https://github.com/fairliereese/iso_perplexity"

[project.scripts]
iso_perplexity = "iso_perplexity.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
