[metadata]
name = isoplex
version = 0.1.1
description = Compute and filter isoforms based on perplexity
author = Fairlie Reese
author_email = fairlie.reese@gmail.com
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    numpy
    typer

[options.packages.find]
where = src
